# esa-window-system

./: .gitignore  BCJR.py  BCJR_decoder_functions.py  Measurement_guide.txt  README.md  acquire_from_time_tagger.py  data_converter.py  decode_from_time_tagger.py  demodulation_functions.py  encode_decode_image_example.py  encoder_functions.py  generate_awg_pattern.py  herbig_haro_10_samples_per_slot_16-PPM_interleaved_sent_bit_sequence  jupiter_greyscale_1_samples_per_slot_4-PPM_interleaved_sent_bit_sequence  jupiter_greyscale_8_samples_per_slot_8-PPM_interleaved_sent_bit_sequence  license.txt  loading_all_data.py  measurement_setup_brief.txt  parse_ppm_symbols.py  plotting.py  ppm_parameters.py  profiler_output_desktop.txt  pyproject.toml  read_data_from_time_tagger.py  scppm_decoder.py  scppm_encoder.py  sent_bit_sequence  sent_bit_sequence_no_csm  sent_symbols  setup.cfg  shift_register.py  simulate_channel_interleaver_overhead.py  simulate_data_rates.py  simulate_decoding_with_file.py  test.py  trellis.py  utils.py  viterbi.py
config_files/: DAC38RF82_8847p36MSPS_PLL_8bitsmode_VCXO.cfg  DAC_config_file.cfg
core/: BCJR_decoder_functions.py  data_converter.py  demodulation_functions.py  encoder_functions.py  parse_ppm_symbols.py  scppm_decoder.py  scppm_encoder.py  trellis.py  utils.py
esawindowsystem/: acquire_from_time_tagger.py  decode_from_time_tagger.py  encode_decode_image_example.py  generate_awg_pattern.py  herbig_haro_10_samples_per_slot_16-PPM_interleaved_sent_bit_sequence  loading_all_data.py  ppm_parameters.py  sent_bit_sequence  sent_bit_sequence_no_csm  (+1 more)
(+54 files in other folders)
